Opened 12 years ago
Closed 12 years ago
#4211 closed defect (fixed)
Assertion sizeof(hwctx->info) >= sizeof(pic_ctx->info) failed at libavcodec/vdpau.c:291
| Reported by: | lvml | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | vdpau |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
When compiling mpv with ffmpeg from their respective repository heads containing this commit merged yesterday:
http://git.videolan.org/?p=ffmpeg.git;a=commitdiff;h=6f764d291121f4980b292cdaa537aa8fb10cb93b#patch1
... and then trying to replay a video file using vdpau for hardware acceleration and output, causes mpv to abort with the error message:
Assertion sizeof(hwctx->info) >= sizeof(pic_ctx->info) failed at libavcodec/vdpau.c:291
(I will add more information if required, but wanted to get notice of this issue out quickly before the merge becomes "old".)
Note:
See TracTickets
for help on using tickets.



Fixed in c263102298ecb1cb8d307d881d2f45e0f6fc16d2